# inf100-crash-course

./: .gitignore  Bingo.ipynb  CrashCourse.ipynb  Kræsjkurs.ipynb  README.md  Wordgame.ipynb  pyproject.toml  requirements.txt
V20/: oppgave_15.py
V21/: airport-codes.csv  oppgave_17.py
