[tool.black]
line-length = 120
target-version = ['py38', 'py39']

[tool.poetry]
name = "inf100"
version = "0.1.0"
description = ""
authors = ["Sondre Nilsen <sondre@eons.io>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.9"
plotly = "^5.3.1"
rise = "^5.7.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", extras = ["jupyter"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
